--- a/css/index_pc.css
+++ b/css/index_pc.css
@@ -92,17 +92,117 @@ menu {
   margin: 20px;
 }
 
+.card-title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  padding-left: 32px;
+  padding-bottom: 16px;
+  margin-top: 16px;
+  border-bottom: 1px solid #EBEFF2;
+}
+
+.progress {
+  width: 381px;
+  height: 80px;
+  margin-top: 16px;
+  margin-left: 32px;
+  background-color: #F1F1F1;
+  border-radius: 4px;
+}
+
+.progress-bar {
+  height: 80px;
+  background-color: #109CF1;
+  border-radius: 4px;
+  width: 62%;
+  margin-bottom: 51px;
+}
+
+.number-highlight {
+  font-size: 72px;
+  font-weight: bold;
+  color: #334D6E;
+  line-height: 84px;
+  margin-left: 32px;
+  margin-top: 30px;
+}
+
+.card-text-bigger {
+  margin-left: 32px;
+  font-size: 24px;
+  color: #334D6E;
+}
+
 .posture_today {
   width: 445px;
-  height: 334px;
+  height: 344px;
 }
 
 .points {
   width: 293px;
-  height: 334px;
+  height: 344px;
 }
 
-.rewards_earned {
+.rewards {
   width: 778px;
-  height: 671px;
+  height: 580px;
+}
+
+.rewards ul {
+  list-style: none;
+  list-style-position: outside;
+}
+
+.rewards_item {
+  height: 180px;
+  padding: 33px 0px;
+  border-bottom: 1px solid #EBEFF2;
+}
+
+.rewards_img {
+  width: 364px;
+  height: 180px;
+  margin-left: 32px;
+  float: left;
+}
+
+.rewards_text {
+  width: 318px;
+  margin-left: 24px;
+  float: left;
+  height: 180px;
+  position: relative;
+  font-size: 22px;
+  color: #334D6E;
+}
+
+.reward_item_title {
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+}
+
+.rewards_text footer {
+  position: absolute;
+  bottom: 0;
+  font-size: 18px;
+}
+
+.rewards_text button {
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 49px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  color: white;
+  background-color: #109CF1;
+  width: 260px;
+  height: 49px;
+  border: 0;
+  box-shadow: none;
+  border-radius: 4px;
 }
